--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/text.css">
     <link rel="stylesheet" href="style/image.css">
+    <link rel="stylesheet" href="style/breakpoints.css">
     <script src="https://kit.fontawesome.com/92ed438ba9.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>Stanislaw Bozych</title>
